--- a/LECTURE6.Rmd
+++ b/LECTURE6.Rmd
@@ -63,7 +63,7 @@ So, for many species per-capita birth rates and death rates are fundamentally de
 
 **Q:** Can you think of some real-world examples where vital rates might differ between males and females?
 
-**Q:** Is sex structure important to consider when modeling populations? Why or why not?
+**Q:** When is sex structure important to consider when modeling populations?
 
 ![](tamarin1.jpg){width=40%}
 
