--- a/LECTURE6.Rmd
+++ b/LECTURE6.Rmd
@@ -170,9 +170,9 @@ $\lambda = e^{r}$
     
     4b. Can you modify the initial abundance of juveniles, subadults and adults so that the population exhibits smooth exponential growth for all three stage classes (and the population as a whole)? This is called **Stable Stage Distribution (SSD)**
     
-    4d. Now change the **Adult mort rate** to 0.65. What happens? Is this a growing population? How many subadults would need to be added to the population each year (population supplementation) to maintain a stable or growing population of >20 adults?  [Top Hat]
+    4d. Now change the adult survival rate to 0.35. What happens? Is this a growing population? How many yearlings would need to be added to the population each year (population supplementation) to maintain a stable or growing population of >20 adults?  [Top Hat]
 
-**Q**: Is supplementation the best strategy for conserving this population?    
+What do you think? Is supplementation the best strategy for conserving this population?    
 
 [--go to next lecture--](LECTURE7.html)
 
