--- a/LECTURE8.Rmd
+++ b/LECTURE8.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Stochasticity and Uncertainty"
 author: "NRES 470/670"
-date: "Spring 2023"
+date: "Spring 2024"
 output: 
   html_document: 
     theme: spacelab
@@ -25,7 +25,7 @@ To download the R script for this lecture, click [here](LECTURE8.R)
 
 ### Upcoming midterm exam
 
-**when and where** The first midterm exam (out of two) is coming up Wednesday **March 15**. You will have the whole 50 minute class period to take the exam. The exam will be on paper this year. 
+**when and where** The first midterm exam (out of two) is coming up Wednesday **March 13**. You will have the whole 50 minute class period to take the exam. The exam will be on paper this year. 
 
 **what** The exam will cover:
 
@@ -53,7 +53,7 @@ To download the R script for this lecture, click [here](LECTURE8.R)
 
 *Please bring a calculator- a regular scientific calculator will work fine*
 
-We will hold a review session for the exam during our regular class meeting on the Monday prior to the exam (next Monday, March 13). Please make note of any questions that come up as you study- we can talk these over during the review session!
+We will hold a review session for the exam during our regular class meeting on the Monday prior to the exam (Monday, March 11). Please make note of any questions that come up as you study- we can talk these over during the review session!
 
 ![](uncertainty2.jpg){width=20%}
 
